--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  url_launcher: ^6.3.0
   flutter:
     sdk: flutter
+
 
   # Firebase core stays on 3.x
   firebase_core: ^3.6.0
@@ -43,6 +45,8 @@ dependencies:
   firebase_auth: ^5.7.0
   shared_preferences: ^2.5.3
   uuid: ^4.5.1
+  firebase_storage: ^12.4.10
+  image_picker: ^1.2.0
 
 
 dev_dependencies:
